# clan.sports

./: .gitignore  Dockerrun.aws.json  README.md  alembic.ini  config.dev.json  config.dev.py  config.py  database.db  docker-compose.yml  mypy.ini  pyproject.toml  test.py  wsgi.ini  wsgi.py
.docker/: Dockerfile  README.md  docker-entrypoint.sh  duplicate.sh
.github/workflows/: backup.txt  clan.sports.code-workspace  services.yml
_app/: database.db
alembic/: README  env.py  script.py.mako
alembic/backup/: populate_data.py
alembic/versions/: 065f8aa08ae8_init.py  0d6fe1ffedab_init.py  13c898181df6_init.py  21215eccc233_populate_data.py  33c8a1e0c076_populate_data.py  4027aca47071_populate_data.py  42580e72217d_populate_data.py  55bc319b582f_init.py  64416d0dbe78_init.py  74855b7f2607_populate_data.py  9d5bbebcb2c9_init.py  a9aed83df4d0_init.py  afa809a3c12d_init.py  dee15d1d0a7e_populate_data.py  e04216aa3a63_populate_data.py  f10083f09576_populate_data.py
app/: __init__.py  api_routes.py  appInfo.py  config.py  container.py  healthcheck.py  heartbeat_routes.py  home.py  home_routes.py  pages.py  pages_routes.py  require_api_key.py
app/api/: api.py  bktree.py  blockchain.py  databaseJupyter.py  models.py  repo.py  schemas.py  seacher.py  smsService.py  utils.py  xHubDatabase.py  xmodels.py
app/home/: README.md  home.py  package-lock.json  package.json  webpack.config.js
app/home/public/: manifest.json
app/home/site/: app.css  bundle.js  index.html  letmein.html  letmeleave.html  manifest.json  test.html
app/home/src/: App.scss  App.tsx  Fetch.tsx  Storage.tsx  alertWarning.js  app.js  button.js  checkCode.js  component.js  data.js  data.tsx  index.html  index.tsx  loadingBackdrop.js  loadingBarSpinner.js  phoneInput.js  requestCode.js  routerApp.tsx  theme.tsx  useDataFetching.tsx  useDataPosting.tsx  useGenerateImage.tsx
app/home/src/Components/: BadgeList.tsx  CardAdd.tsx  ClanList.tsx  Copyright.tsx  Error404.tsx  Home.tsx  NotificationList.tsx  Notifications.tsx  PassList.tsx  PointList.tsx  ProfileList.tsx  countryList.tsx  index.tsx
app/pages/: package-lock.json  package.json  pages.py  postcss.config.js  tailwind.config.js  webpack.config.js
app/pages/src/: alertWarning.js  app.js  app.scss  appInfo.js  blockClubInfo.js  blockCoachInfo.js  blockPlayerInfo.js  blockPlayersTable.js  blockTeamInfo.js  blockTeamTable.js  checkCode.js  clubList.js  fetchApi.js  genderList.js  hitList.js  loading.js  loadingBackdrop.js  loadingBarSpinner.js  login.js  loginMenu.js  pageClub.js  pageCoach.js  pageHome.js  pageItem.js  pageLogin.js  pagePlayer.js  pageTeam.js  phoneInput.js  requestCode.js  searchForm.js  stateList.js  teamList.js  yearList.js
app/react_app/: .babelrc  package-lock.json  package.json  react_app.py  webpack.config.js
app/react_app/src/: App.tsx  Chart.tsx  NoAccess.tsx  Test.tsx  index.html  index.tsx
app/ui/ui-app/: package-lock.json
gitdbengine/: data.csv  data.json  data.jsonl
misc/: clan.sports.code-workspace  postman.json
(+60 files in other folders)
