[tool.poetry]
name = "clan-sports"
version = "0.3.7"
description = ""
authors = ["codigouranio"]
license = "GPL-3.0"
readme = "README.md"
packages = []


[tool.poetry.dependencies]
alembic = "^1.13.1"
base58 = "^2.1.1"
bip32utils = "^0.3.post4"
black = "^23.12.1"
blinker = "^1.7.0"
boto3 = "^1.34.65"
click = "^8.1.7"
colorama = "0.2.5"
cssmin = "^0.2.0"
dependency-injector = "^4.41.0"
ecdsa = "^0.19.0"
faker = "^21.0.0"
flake8 = "^6.1.0"
flask = "^3.0.0"
flask-assets = "^2.1.0"
flask-caching = "^2.3.0"
flask-cors = "^4.0.0"
flask-limiter = "^3.8.0"
flask-login = "^0.6.3"
flask-marshmallow = "^1.2.1"
flask-session = "^0.6.0"
flask-sessions = "^0.1.5"
flask-sqlalchemy = "^3.1.1"
flask-talisman = "^1.1.0"
gitpython = "^3.1.43"
gunicorn = "^21.2.0"
isort = "^5.13.2"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
jsmin = "^3.0.1"
lesscpy = "^0.15.1"
markdown = "^3.7"
markupsafe = "^2.1.3"
marshmallow-sqlalchemy = "^1.0.0"
mccabe = "^0.7.0"
mnemonic = "^0.21"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
packaging = "^23.2"
pathspec = "^0.12.1"
pillow = "^10.3.0"
pip = "^24.0"
platformdirs = "^4.1.0"
ply = "^3.11"
pycodestyle = "^2.11.1"
pycryptodome = "^3.20.0"
pyflakes = "^3.1.0"
python = "^3.11"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
qrcode = "^7.4.2"
redis = "^5.0.3"
requests = "^2.31.0"
six = "^1.16.0"
sqlalchemy = "^2.0.27"
toml = "^0.10.2"
typing-extensions = "^4.9.0"
uwsgi = { version = "^2.0.24", markers = "python_version >= '3.11' and sys_platform == 'linux'" }
webassets = "^2.0"
werkzeug = "^3.0.1"
pandas = "^2.2.3"
ijson = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
